# pathway

./: .gitignore  .mise.toml  .rustfmt.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: README.md  copilot-instructions.md  dependabot.yml  labeler.yml
.github/workflows/: benchmark.yml  ci.yml  dependency-review.yml  macos-app.yml  pr-labeler.yml  quality.yml  release.yml  update-deps.yml
core/: Cargo.toml  deny.toml
core/docs/: virtual_filesystem.md
core/src/: error.rs  filesystem.rs  lib.rs  logging.rs  main.rs  profile.rs  url.rs
core/src/browser/: channels.rs  linux.rs  macos.rs  mod.rs  sources.rs  unknown.rs  windows.rs
core/tests/: README.md  browser_integration.rs  integration.rs  virtual_filesystem_integration.rs
packaging/macos/: Info.plist  PathwayShim.swift  README.md  build_app.sh
