[package]
name = "pathway"
version = "0.1.0"
edition = "2021"
authors = ["Pathway contributors"]
license = "MIT OR Apache-2.0"
description = "A lightweight URL routing agent that opens URLs in the appropriate browser/profile based on configurable rules"
repository = "https://github.com/Guria/pathway"
keywords = ["cli", "browser", "url", "launcher", "router"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs-next = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.8"
mockall = "0.13"
